--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body class = "bgcolor">
     <div class="intro">
-        <div class="curtain curtain-left"></div>
-        <div class="curtain curtain-right"></div>
+     
         <div class="logo-header">
             <div class="logo"><h1 class="head-curtain">Hello Folks !</h1></div>
         </div>
@@ -26,28 +25,29 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link no-underline">
-                        Home
+                        <span class= "change ">Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="About.html" class="nav-link no-underline">
-                        About
+                        <span class= "change ">About</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="Project.html" class="nav-link no-underline">
-                        Projects
+                        <span class= "change ">Projects</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="Contact.html" class="nav-link no-underline">
-                        Contact
+                        <span class= "change ">Contact</span>
                     </a>
                 </li>
             </ul>
         </nav>
     </div>
 </div>
+<br/> <br/>
     
 
 
