--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
         
         <div class="text">
-            <p style="font-family:cursive;">
-                <strong>Hello!</strong> , I'm <strong style="color: #2C3E50;">Subash</strong>, a passionate developer. Feel free to explore my projects and get in touch!
+            <p >
+                <strong >  Hello!</strong> , I'm <span class = " name">SUBASH</span>, a passionate developer. 
             </p>
         </div>
         
