--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </p>
            <center><p >Wanna know more about me ?</p></center> <br/>
            <center>
-            <a href= "resume/Subash resume.pdf" target="_blank" style="text-decoration: none; "><button class="button-49" role="button"> My CV</button></a>
+            <a href= "resume/Subash_resume.pdf" target="_blank" style="text-decoration: none; "><button class="button-49" role="button"> My CV</button></a>
                 
            </center>
         </div>
