--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style/CurtainAnimation.css">
     <link rel="stylesheet" href="style/Home.css">
+    <link rel="stylesheet" href="style/About.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bgcolor">
@@ -28,7 +29,7 @@
         </div>
         <ul >
             <li><a href="index.html"> HOME</a></li>
-            <li><a href="Home.html"> ABOUT</a></li>
+            <li><a href="#About"> ABOUT</a></li>
             <li><a href="Home.html"> PROJECTS</a></li>
             <li><a href="Home.html"> CONTACT</a></li>
         </ul> 
@@ -60,6 +61,21 @@
            </center>
         </div>
         </div>
+    </div><br/><br/><br/><br/><br/>
+                      <!-- ------------ About page -----------   -->
+
+    <div id ="About">
+        <div class="Education">
+            <center>
+                <span class="about-head">ABOUT ME </span>
+            </center>
+            
+           
+
+
+        </div>
+
+
     </div>
 
     </body>
